--- a/package.json
+++ b/package.json
@@ -1,1 +1,15 @@
-{\n  "name": "fruit-vegetable-store",\n  "version": "1.0.0",\n  "scripts": {\n    "dev": "next dev",\n    "build": "next build",\n    "start": "next start"\n  },\n  "dependencies": {\n    "next": "latest",\n    "react": "latest",\n    "react-dom": "latest"\n  },\n  "devDependencies": {\n    "typescript": "latest",\n    "@typescript-eslint/parser": "latest",\n    "@typescript-eslint/eslint-plugin": "latest"\n  }\n}
+{
+  "name": "fruit-vegetable-store",
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
+  },
+  "dependencies": {
+    "next": "15.2.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0"
+  }
+}
