--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -198,46 +198,144 @@ jobs:
           ssh -i ~/.ssh/ec2_key ubuntu@${{ steps.final_host.outputs.host }} "docker login --username AWS --password-stdin $ECR_REGISTRY"
 
           ssh -i ~/.ssh/ec2_key ubuntu@${{ steps.final_host.outputs.host }} << EOF
-            set -e
+            set -euo pipefail
             sudo apt-get update -y
-            sudo apt-get install -y docker.io nginx
+            sudo apt-get install -y docker.io nginx curl
             sudo systemctl enable docker
             sudo systemctl start docker
             sudo systemctl enable nginx
             sudo systemctl start nginx
 
+            PREVIOUS_IMAGE=""
+            NGINX_SITE="/etc/nginx/sites-enabled/fruit-vegetable-store"
+            NGINX_BACKUP=""
+
+            if docker ps -a --format '{{.Names}}' | grep -qx "$CONTAINER_NAME"; then
+              PREVIOUS_IMAGE=$(docker inspect -f '{{.Config.Image}}' "$CONTAINER_NAME" || true)
+            fi
+
+            if [ -f "$NGINX_SITE" ]; then
+              NGINX_BACKUP="${NGINX_SITE}.bak.$(date +%s)"
+              sudo cp "$NGINX_SITE" "$NGINX_BACKUP"
+            fi
+
+            rollback() {
+              echo "Deployment failed, starting rollback..."
+
+              if [ -n "$NGINX_BACKUP" ] && [ -f "$NGINX_BACKUP" ]; then
+                sudo cp "$NGINX_BACKUP" "$NGINX_SITE" || true
+                sudo nginx -t || true
+                sudo systemctl reload nginx || true
+              fi
+
+              docker stop "$CONTAINER_NAME" || true
+              docker rm "$CONTAINER_NAME" || true
+
+              if [ -n "$PREVIOUS_IMAGE" ]; then
+                docker run -d \
+                  --name "$CONTAINER_NAME" \
+                  --restart unless-stopped \
+                  -p 127.0.0.1:$APP_PORT:3000 \
+                  -e NODE_ENV=production \
+                  "$PREVIOUS_IMAGE" || true
+              fi
+
+              exit 1
+            }
+
+            trap rollback ERR
+
             docker pull $IMAGE_URI
-            docker stop $CONTAINER_NAME || true
-            docker rm $CONTAINER_NAME || true
+            docker stop "$CONTAINER_NAME" || true
+            docker rm "$CONTAINER_NAME" || true
             docker run -d \
-              --name $CONTAINER_NAME \
+              --name "$CONTAINER_NAME" \
               --restart unless-stopped \
               -p 127.0.0.1:$APP_PORT:3000 \
               -e NODE_ENV=production \
               $IMAGE_URI
 
-            sudo tee /etc/nginx/sites-enabled/fruit-vegetable-store >/dev/null <<'NGINX'
+            for i in {1..12}; do
+              if curl -fsS "http://127.0.0.1:$APP_PORT" >/dev/null; then
+                break
+              fi
+              if [ "$i" -eq 12 ]; then
+                echo "Application did not become healthy in time" >&2
+                exit 1
+              fi
+              sleep 5
+            done
+
+            sudo tee "$NGINX_SITE" >/dev/null <<'NGINX'
+            upstream fruit_vegetable_store_upstream {
+              server 127.0.0.1:__APP_PORT__;
+              keepalive 64;
+            }
+
+            map $http_upgrade $connection_upgrade {
+              default upgrade;
+              ''      close;
+            }
+
             server {
-              listen 80;
+              listen 80 default_server;
+              listen [::]:80 default_server;
               server_name __APP_DOMAIN__;
 
+              server_tokens off;
+
+              add_header X-Frame-Options "SAMEORIGIN" always;
+              add_header X-Content-Type-Options "nosniff" always;
+              add_header X-XSS-Protection "1; mode=block" always;
+              add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+              add_header Permissions-Policy "geolocation=(), microphone=(), camera=()" always;
+
+              client_max_body_size 10m;
+              keepalive_timeout 65;
+              send_timeout 60;
+
+              gzip on;
+              gzip_comp_level 5;
+              gzip_min_length 1024;
+              gzip_vary on;
+              gzip_proxied any;
+              gzip_types text/plain text/css text/xml application/json application/javascript application/xml+rss application/atom+xml image/svg+xml;
+
+              location = /health {
+                access_log off;
+                default_type text/plain;
+                return 200 "ok\n";
+              }
+
               location / {
-                proxy_pass http://127.0.0.1:__APP_PORT__;
+                proxy_pass http://fruit_vegetable_store_upstream;
                 proxy_http_version 1.1;
 
                 proxy_set_header Host $host;
                 proxy_set_header X-Real-IP $remote_addr;
                 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
                 proxy_set_header X-Forwarded-Proto $scheme;
+                proxy_set_header X-Forwarded-Host $host;
+                proxy_set_header X-Forwarded-Port $server_port;
 
                 proxy_set_header Upgrade $http_upgrade;
-                proxy_set_header Connection "upgrade";
+                proxy_set_header Connection $connection_upgrade;
+
+                proxy_connect_timeout 10s;
+                proxy_send_timeout 60s;
+                proxy_read_timeout 60s;
+                proxy_cache_bypass $http_upgrade;
               }
             }
             NGINX
 
-            sudo sed -i "s|__APP_DOMAIN__|$APP_DOMAIN|g; s|__APP_PORT__|$APP_PORT|g" /etc/nginx/sites-enabled/fruit-vegetable-store
+            sudo sed -i "s|__APP_DOMAIN__|$APP_DOMAIN|g; s|__APP_PORT__|$APP_PORT|g" "$NGINX_SITE"
             sudo rm -f /etc/nginx/sites-enabled/default
             sudo nginx -t
-            sudo systemctl restart nginx
+            sudo systemctl reload nginx
+
+            trap - ERR
+            if [ -n "$NGINX_BACKUP" ] && [ -f "$NGINX_BACKUP" ]; then
+              sudo rm -f "$NGINX_BACKUP"
+            fi
           EOF
